--- a/index.html
+++ b/index.html
@@ -17,24 +17,11 @@
   <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
 
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="./css/style.css">
+
   <style>
-    .navbar {
-      border: 1px solid #e3e3e3;
-    }
 
-    .navbar-brand img {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-right: 10px;
-    }
-
-    .refresh-btn {
-      background-color: #28a745;
-      color: #fff;
-      border: none;
-    }
   </style>
 </head>
 <body>
@@ -50,10 +37,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">首页</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">首页</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">关于我</a>
+            <a class="nav-link" href="./about-me.html">关于我</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">博客</a>
@@ -78,12 +65,12 @@
         <ul class="list-unstyled">
           <li><i class="bi bi-gender-male"></i>&nbsp; 性别: 男</li>
           <li><i class="bi bi-calendar"></i>&nbsp; 生日: 2010年5月7日</li>
-          <li><i class="bi bi-geo-alt"></i>&nbsp; 定居地: 中国浙江宁波</li>
+          <li><i class="bi bi-geo-alt"></i>&nbsp; 居住地: 浙江, 宁波</li>
           <li><i class="bi bi-github"></i>&nbsp; GitHub: <a href="https://github.com/PYHXiaoqing" target="_blank" class="text-decoration-none">@PYHXiaoqing</a></li>
           <li><i class="bi bi-twitter"></i>&nbsp; X(Twitter): <a href="https://x.com/HansPeng422053" target="_blank" class="text-decoration-none">@HansPeng422053</a></li>
           <li><i class="bi bi-envelope"></i>&nbsp; 邮箱: <a href="mailto:afb368633@163.com" class="text-decoration-none">afb368633@163.com<EMAIL></a></li>
         </ul>
-        <a href="#" class="btn btn-success btn-sm">关于我</a>
+        <a href="./about-me.html" class="btn btn-success btn-sm">关于我</a>
         <a href="#" class="btn btn-success btn-sm">博客</a>
         <a href="#" class="btn btn-success btn-sm">作品集</a>
         <a href="#" class="btn btn-success btn-sm">联系我</a>
@@ -182,7 +169,6 @@
     "南极洲是地球上最寒冷的大陆。",
     "太阳黑子是太阳表面上的磁活动区域。",
     "马达加斯加岛上的狐猴是世界上最大的猴类之一。",
-    "草原是广阔的自然生态系统。",
     "金字塔是古埃及法老的陵墓。",
     "希腊是欧洲文明的摇篮之一。",
     "北极是地球上最北端的地区。",
